[tool.poetry]
name = "tripplanner"
version = "0.1.0"
description = ""
authors = ["Pranav Agarwal"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = {extras = ["tools"], version = "*"}
pydantic = "*"
load-dotenv = "^0.1.0"
crewai-tools = "*"
flask = "^3.0.2"
flask-cors = "^4.0.0"
unstructured = "*"
pyowm = '3.3.0'
tools = "*"
langchain-community = "*"
python-dotenv = "1.0.0"
markdown = "^3.7"
markdown2 = "^2.5.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"